[gd_scene load_steps=3 format=3 uid="uid://c0yrghyjhqjqc"]

[ext_resource type="Texture2D" uid="uid://b08k8njuqu4il" path="res://particles/shockwave.png" id="1_shockwave"]
[ext_resource type="Script" uid="uid://y2cvs8gxhrf1" path="res://particles/shockwave_blast.gd" id="2_script"]

[node name="ShockwaveBlast" type="Node2D"]
script = ExtResource("2_script")

[node name="Sprite1" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_shockwave")

[node name="Sprite2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.8)
rotation = 0.785398
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_shockwave")

[node name="Sprite3" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.8, 1, 0.6)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_shockwave")
